@@ -1,11 +1,8 @@
 name    'dereklio-gnupg'
-version '0.0.2'
-source 'git://github.com/dereklio/golja-gnupg.git'
+version '0.0.4'
+source 'git://github.com/dereklio/puppet-gnupg.git'
 author 'Deryck Lio'
 license 'ASL 2.0'
 summary 'Manage gnupg package and public keys'
-description 'Manage gnupg instalaltion and handling public keys'
-project_page 'http://github.com/n1tr0g/golja-gnupg.git'
-
-## Add dependencies, if any:
-# dependency 'username/name', '>= 1.2.0'
+description 'Manage gnupg installation and handling public keys'
+project_page 'https://github.com/dereklio/puppet-gnupg'
