@@ -65,11 +65,11 @@
   "dependencies": [
 
   ],
-  "description": "Manage gnupg instalaltion and handling public keys\n\n(This is a mod of golja, as it is preventing me from using www-data in the user field)",
+  "description": "Manage gnupg installation and handling public keys\n\n(This is a mod of golja, as it is preventing me from using www-data in the user field)",
   "license": "ASL 2.0",
   "name": "dereklio-gnupg",
-  "project_page": "http://github.com/dereklio/golja-gnupg.git",
-  "source": "git://github.com/dereklio/golja-gnupg.git",
+  "project_page": "https://github.com/dereklio/puppet-gnupg",
+  "source": "git://github.com/dereklio/puppet-gnupg.git",
   "summary": "Manage gnupg package and public keys",
   "types": [
     {
@@ -111,5 +111,5 @@
       ]
     }
   ],
-  "version": "0.0.2"
+  "version": "0.0.4"
 }
