@@ -1,3 +1,6 @@
+2014-04-04 - Deryck Lio <me@deryck.co> - 0.0.4
+* Allowed "-" as valid username, e.g. www-data for Apache2
+
 2014-03-16 - Dejan Golja <dejan@golja.org> - 0.0.3
 * Added Puppet Forge Search by Module Compatibility
 
